# ENG_Lakehouse_Pipeline

./: .pre-commit-config.yaml  README.md  app.py  data_sql.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: insert.data.yml
databricks_scripts/: conect_databricks.py  queries.py
pipeline/pipeline_bronze/transformations/: canalvenda_bronze.sql  categorias_bronze.sql  clientes_bronze.sql  emailmarketing_bronze.sql  entregue_bronze.sql  estadocivil_bronze.sql  formapagamento_bronze.sql  generocliente_bronze.sql  generoproduto_bronze.sql  itenspedido_bronze.sql  marcas_bronze.sql  pedidos_bronze.sql  produtos_bronze.sql  status_bronze.sql
src/: insert_data_supabase_db.py  list_auxiliar.py
supabase/: conect_supabase_db.py  main_supabase.py  model_supabase_db.py
utils/: create_catalog_schemas.ipynb  create_grant.ipynb
