[project]
name = "eng-lakehouse-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "databricks-sql-connector[pyarrow]>=4.2.5",
    "faker>=40.1.2",
    "plotly>=6.5.2",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.54.0",
    "tqdm>=4.67.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
